--- a/client/web-app/styles/phone.css
+++ b/client/web-app/styles/phone.css
@@ -311,6 +311,7 @@
     }
 
     #topBox {
+        overflow: hidden;
         position: relative;
         width: auto;
         height: auto;
